--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -14,6 +14,11 @@ body {
   // min-height: 100vh;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .custom-dark-input {
   // @apply bg-gradient-to-l dark:from-slate-800 dark:to-slate-900 focus:ring-2 focus:outline-none focus:ring-blue-500 dark:focus:ring-purple-600/70;
   @apply dark:bg-slate-900 dark:bg-gradient-to-l dark:from-slate-800 focus:outline-none;
